2020-06-16 Jan Kotanski <jan.kotanski@desy.de>
	* add diffractogram tool
	* and single roi aliases
	* fix freeze 1d plot in log scale
	* tagged as 2.42.0

2020-05-21 Jan Kotanski <jan.kotanski@desy.de>
	* fix for load file names from command lines
	* tagged as 2.41.5

2020-05-20 Jan Kotanski <jan.kotanski@desy.de>
	* fix for negative offset values in multi-source mode
	* tagged as 2.41.4

2020-05-20 Jan Kotanski <jan.kotanski@desy.de>
	* show widget if the corresponding options is set
	* improve ChannekGroupBox changeView()
	* tagged as 2.41.3

2020-04-02 Jan Kotanski <jan.kotanski@desy.de>
	* update help widget
	* tagged as 2.41.2

2020-04-01 Jan Kotanski <jan.kotanski@desy.de>
	* add polling interval for Parameters tool to the configuration
	* add support for non-scalar parameters
	* change layout of Parameters tool
	* tagged as 2.41.1

2020-03-31 Jan Kotanski <jan.kotanski@desy.de>
	* add Parameters tool
	* tagged as 2.41.0

2020-03-23 Jan Kotanski <jan.kotanski@desy.de>
	* fix auto levels when histogram is off
	* fix for [un-]starred icons when fromTheme icons are not available
	* tagged as 2.40.3

2020-03-20 Jan Kotanski <jan.kotanski@desy.de>
	* fix issue for pyqt4
	* fixes for image source combobox and adding image sources
	* tagged as 2.40.2

2020-03-19 Jan Kotanski <jan.kotanski@desy.de>
	* fix for configuration state for py3
	* tagged as 2.40.1

2020-03-19 Jan Kotanski <jan.kotanski@desy.de>
	* add support for reading LavueState in LavueController
	* tagged as 2.40.0

2020-03-13 Jan Kotanski <jan.kotanski@desy.de>
	* add PixelSizeX and PixelSizeY to LavueController
	* add support for changing logging level from LavueController
	* catch exceptions from paint method
	* tagged as 2.39.0

2020-03-12 Jan Kotanski <jan.kotanski@desy.de>
	* remove callback on disconnect Tango Events
	* tagged as 2.38.2

2020-03-10 Jan Kotanski <jan.kotanski@desy.de>
	* fix deadlock problem in  unsubscribe tango events
	* tagged as 2.38.1
