@@ -2,6 +2,7 @@
 	* add diffractogram tool
 	* and single roi aliases
 	* fix freeze 1d plot in log scale
+	* add progressbar for range calculation
 	* tagged as 2.42.0
 
 2020-05-21 Jan Kotanski <jan.kotanski@desy.de>
